<resources>
    <string name="app_name">HW1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name_Surname">Contact info</string>
    <string name="InfoPhone">InfoPhone</string>
    <string name="InfoBirthday">InfoBirthday</string>
    <string name="item_selected_msg">Contact Info</string>
    <string name="calling_question">Call</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="call_dialog_tag">calling</string>
    <string name="long_click_msg" />
    <string name="delete_dialog_tag">Delete</string>
    <string name="delete_question">Delete contact?</string>
    <string name="delete_cancel_msg">Return to delete the contact?</string>
    <string name="retry_msg">YES</string>
    <string name="Contact_Name">Name</string>
    <string name="Contact_Surname">Surname</string>
    <string name="Contact_Birthday">Birthday </string>
    <string name="Contact_Phone">Phone Number</string>
    <string name="add_task">ADD</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="default_name">default_name</string>
    <string name="default_surname">default_surname</string>
    <string name="default_birthday" />
    <string name="default_phone" />

</resources>
